--- a/first.yml
+++ b/first.yml
@@ -1,6 +1,6 @@
 ---
-- hosts: all
+- hosts: localhost
   tasks:
-    - name: Hello World!
-      debug:
-        msg: "Hello World!"
+    - name: test ping
+      ping:
+
